Convert upload to api response